# mypy-newtype

./: meson.build  pyproject.toml
src/newtype/: __init__.py  newtype.c  newtype.pyi
